# ur_ws

./: .gitignore  README.md
src/robotiq_85_gripper/robotiq_85_description/launch/: upload_robotiq_85_gripper.launch
src/robotiq_85_gripper/robotiq_85_description/urdf/: robotiq_85_gripper.transmission.xacro
src/robotiq_85_gripper/robotiq_85_simulation/roboticsgroup_upatras_gazebo_plugins/src/: disable_link_plugin.cpp
src/robotiq_85_gripper/robotiq_85_simulation/robotiq_85_gazebo/launch/: robotiq_85.launch
src/universal_robot/ur_description/urdf/: robot.urdf
src/universal_robot/ur_gazebo/: CMakeLists.txt
src/universal_robot/ur_gazebo/include/: rrt.h
src/universal_robot/ur_gazebo/launch/: ur5_bringup.launch
src/universal_robot/ur_gazebo/launch/inc/: load_ur.launch.xml
src/universal_robot/ur_gazebo/src/: path_planning.cpp  rrt.cpp
src/universal_robot/ur_gazebo/urdf/: ur.xacro  ur_macro.xacro
src/ur_gripper_robot/ur5_kdl_control/: CMakeLists.txt  package.xml
src/ur_gripper_robot/ur5_kdl_control/include/: angle_utils.h  dualarm_ik.h  forward_kinematics.h  inverse_kinematics.h  math_utils.h  ur5_dh_params.h  ur5_ik_solver.h
src/ur_gripper_robot/ur5_kdl_control/src/: angle_utils.cpp  dual_ur5_ik_solver.cpp  dualarm_ik.cpp  forward_kinematics.cpp  ik_test.cpp  inverse_kinematics.cpp  math_utils.cpp  move_ur5_arms_to_zero.cpp  my_tf_listener.cpp  ur5_dh_params.cpp  ur5_ik_solver.cpp  ur5_kdl_ik_solver.cpp
src/ur_gripper_robot/ur_gripper_gazebo/: CMakeLists.txt  package.xml
src/ur_gripper_robot/ur_gripper_gazebo/config/: dual_ur5_controllers.yaml  ur5_controllers.yaml
src/ur_gripper_robot/ur_gripper_gazebo/launch/: dual_ur5_bringup.launch  dual_ur5_bringup_with_rviz.launch  ur5_bringup.launch  ur5_bringup_with_rviz.launch
src/ur_gripper_robot/ur_gripper_gazebo/launch/inc/: load_dual_ur.launch.xml  load_dual_ur5.launch.xml  load_ur.launch.xml  load_ur5.launch.xml
src/ur_gripper_robot/ur_gripper_gazebo/rviz/: dual_ur5_gripper.rviz  ur5_gripper.rviz
src/ur_gripper_robot/ur_gripper_gazebo/urdf/: dual_ur.xacro  ur.xacro  ur_macro.xacro
